# robot_shared_control

./: CMakeLists.txt  package.xml
cfg/: falconControl_params.cfg  feetTelemanipulation_params.cfg  footControl_params.cfg
include/: FalconControl.h  FeetTelemanipulation.h  FootControl.h
launch/: foot_platforms.launch  optitrack_object_grasping.launch
src/: FalconControl.cpp  FeetTelemanipulation.cpp  FootControl.cpp  falconControl_node.cpp  feetTelemanipulation_node.cpp  footControl_node.cpp
